Co-authored-by: Panczel <Panczel24@users.noreply.github.com>

--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="app.js" defer></script>
+    <title>Haha</title>
 </head>
 <body>
-    sdfasdfsdf
-    sdfasdfsdfsdf
-    sdf
-    sd
-    fsd
-    fds
+    <header>
+        <h1>Jáccós oldala</h1>
+        <nav>
+            <ul id="navcont">
+                <li class="navtool"><a href="/public/index.html">Main Page!</a></li>
+                <li class="navtool"><a href="/public/kopapirollo/index.html">kő papir olló</a></li>
+                <li class="navtool"><a href="/public/map/index.html">Hol vagy?</a></li>
+                <li class="navtool"><a href="/public/2048/index.html">2048</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div id="cont">
+            <div class="table"><div class="txt">a</div></div>
+            <div class="table"><div id="day-txt">a</div><div class="txt">a</div></div>
+            <div class="table"><div id="day-poem">A</div><div class="txt">a</div></div>
+        </div>
+    </main>
+    <footer>
+    </footer>
 </body>
 </html>
