--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul id="navcont">
                 <li class="navtool"><a href="/public/index.html">Main Page!</a></li>
-                <li class="navtool"><a href="/public/kopapirollo/index.html">kő papir olló</a></li>
+                <li class="navtool"><a href="/public/kpo">kő papir olló</a></li>
                 <li class="navtool"><a href="/public/map/index.html">Hol vagy?</a></li>
                 <li class="navtool"><a href="/public/2048/index.html">2048</a></li>
             </ul>
