--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
         <h1>Jáccós oldala</h1>
         <nav>
             <ul id="navcont">
-                <li class="navtool"><a href="/public/index.html">Main Page!</a></li>
-                <li class="navtool"><a href="/public/kpo">kő papir olló</a></li>
-                <li class="navtool"><a href="/public/map/index.html">Hol vagy?</a></li>
-                <li class="navtool"><a href="/public/2048/index.html">2048</a></li>
+                <li class="navtool"><a href="/">Main Page!</a></li>
+                <li class="navtool"><a href="/kpo">kő papir olló</a></li>
+                <li class="navtool"><a href="/map">Hol vagy?</a></li>
+                <li class="navtool"><a href="/2048">2048</a></li>
             </ul>
         </nav>
     </header>
