--- a/public/kpo/index.html
+++ b/public/kpo/index.html
@@ -14,6 +14,12 @@
         <nav>
             <div id="header">Kő Papir Olló</div>
             <div id="score">X You || Your computer X</div>
+            <ul id="navcont">
+                <li class="navtool"><a href="/">Main Page!</a></li>
+                <li class="navtool"><a href="/kpo">kő papir olló</a></li>
+                <li class="navtool"><a href="/map">Hol vagy?</a></li>
+                <li class="navtool"><a href="/2048">2048</a></li>
+            </ul>
         </nav>
     </header>
 
